src/main/java/com/example/pedidos/infra/errors/AccountDuplicated.java
package com.example.pedidos.infra.errors;

public class AccountDuplicated extends RuntimeException{
    public AccountDuplicated(String mesaje){
        super(mesaje);
    }
}

